--- a/res/layout/reim_member.xml
+++ b/res/layout/reim_member.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/choose_location"
+            android:text="@string/choose_member"
             android:textColor="@color/major_light"
             android:textSize="20sp" />
 
@@ -40,44 +40,12 @@
             android:textColor="@color/major_light" />
 
     </RelativeLayout>
-
-    <RelativeLayout
+    
+    <ListView
+        android:id="@+id/userListView"
         android:layout_width="match_parent"
-        android:layout_height="48dp" >
-
-        <EditText
-            android:id="@+id/locationEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:background="@null"
-            android:ems="10"
-            android:hint="@string/input_location"
-            android:inputType="text" />
-
-    </RelativeLayout>
-            
-	<include
-		android:layout_width="match_parent"
-		android:layout_height="0.5dp"
-	  	layout="@layout/divider"/>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-	    android:layout_height="24dp"
-		android:background="@color/list_item_header" />
-            
-	<include
-		android:layout_width="match_parent"
-		android:layout_height="0.5dp"
-	  	layout="@layout/divider"/>
-
-	<ListView
-	    android:id="@+id/locationListView"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent" >
-	</ListView>
+        android:layout_height="match_parent"
+        android:listSelector="@drawable/list_item_drawable" >
+    </ListView>
 
 </LinearLayout>
