--- a/res/layout/activity_report_following.xml
+++ b/res/layout/activity_report_following.xml
@@ -72,12 +72,13 @@
                 android:textColor="@color/font_major_dark"
                 android:textSize="16sp" />
         </LinearLayout>
-
-        <include
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:layout_marginLeft="82dp"
-            layout="@layout/view_divider" />
+        
+		<LinearLayout
+		    android:layout_width="match_parent"
+		    android:layout_height="0.5dp"
+		    android:layout_marginLeft="82dp"
+		    android:orientation="vertical"
+		    android:background="@color/divider" />
 
         <LinearLayout
             android:layout_width="match_parent"
