--- a/res/layout/view_divider.xml
+++ b/res/layout/view_divider.xml
@@ -3,6 +3,4 @@
     android:layout_width="match_parent"
     android:layout_height="0.5dp"
     android:orientation="vertical"
-    android:background="@color/divider" >    
-
-</LinearLayout>
+    android:background="@color/divider" />
