--- a/app/src/main/res/layout/activity_reim_edit.xml
+++ b/app/src/main/res/layout/activity_reim_edit.xml
@@ -180,7 +180,7 @@
                     android:id="@+id/categoryLayout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="90dp"
+                    android:layout_marginLeft="80dp"
                     android:layout_marginRight="16dp" >
 
                     <ImageView
@@ -213,12 +213,12 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="56dp" >
+                android:layout_height="wrap_content" >
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
+                    android:layout_gravity="center_vertical"
                     android:layout_marginTop="19dp"
                     android:layout_marginLeft="16dp"
                     android:text="@string/vendor"
@@ -228,46 +228,44 @@
                 <TextView
                     android:id="@+id/vendorTextView"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="80dp"
-                    android:layout_marginRight="16dp"
-                    android:gravity="center_vertical"
-                    android:textColor="@color/font_major_dark"
-                    android:textSize="18sp" />
-
-            </RelativeLayout>
-
-            <include
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:layout_marginLeft="80dp"
-                layout="@layout/view_divider"/>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="56dp" >
-
-                <TextView
-                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginTop="19dp"
-                    android:layout_marginLeft="16dp"
-                    android:text="@string/location"
-                    android:textColor="@color/hint_grey"
-                    android:textSize="14sp" />
-
-                <TextView
-                    android:id="@+id/locationTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:minHeight="56dp"
+                    android:layout_toLeftOf="@+id/locationLayout"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="80dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginRight="6dp"
                     android:gravity="center_vertical"
                     android:textColor="@color/font_major_dark"
                     android:textSize="18sp" />
+
+                <LinearLayout
+                    android:id="@+id/locationLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_alignParentRight="true"
+                    android:paddingTop="19dp"
+                    android:paddingBottom="18dp"
+                    android:paddingRight="8dp">
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:contentDescription="@string/location"
+                        android:src="@drawable/location" />
+
+                    <TextView
+                        android:id="@+id/locationTextView"
+                        android:layout_width="wrap_content"
+                        android:maxWidth="68dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="3dp"
+                        android:ellipsize="end"
+                        android:singleLine="true"
+                        android:textColor="@color/hint_grey"
+                        android:textSize="14sp" />
+
+                </LinearLayout>
 
             </RelativeLayout>
 
