--- a/app/src/main/res/layout/activity_reim_vendor.xml
+++ b/app/src/main/res/layout/activity_reim_vendor.xml
@@ -30,35 +30,45 @@
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/confirmTextView"
+            android:id="@+id/addTextView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:gravity="center"
-            android:text="@string/confirm"
+            android:text="@string/add"
             android:textColor="@color/title_text_color"
             android:textSize="16sp" />
 
     </RelativeLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="48dp" >
+
+        <ImageView
+            android:id="@+id/searchImageView"
+            android:layout_width="52dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:paddingTop="14dp"
+            android:paddingBottom="14dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:contentDescription="@string/search"
+            android:src="@drawable/search" />
 
         <EditText
             android:id="@+id/vendorEditText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="16dp"
+            android:layout_height="match_parent"
             android:layout_marginRight="16dp"
             android:background="@null"
             android:hint="@string/input_vendor"
             android:inputType="text" />
 
-    </RelativeLayout>
+    </LinearLayout>
             
 	<include
 		android:layout_width="match_parent"
