--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,60 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@drawable/list_item_drawable"
+    android:paddingTop="16dp"
+    android:paddingBottom="14dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp" >
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="7dp" >
+        android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/statusTextView"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/statusTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingLeft="3dp"
+                android:paddingRight="3dp"
+                android:textColor="@color/major_light"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/proveTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="6dp"
+                android:paddingLeft="1dp"
+                android:paddingRight="1dp"
+                android:text="@string/status_prove_ahead"
+                android:textColor="@color/major_light"
+                android:textSize="14sp" />
+
+            <ImageView
+                android:id="@+id/photoImageView"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="6dp"
+                android:contentDescription="@string/invoice"
+                android:src="@drawable/camera" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:paddingLeft="3dp"
-            android:paddingRight="3dp"
-            android:textColor="@color/major_light"
-            android:textSize="14sp" />
+            android:layout_alignParentRight="true" >
 
-        <TextView
-            android:id="@+id/proveTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/statusTextView"
-            android:layout_marginLeft="6dp"
-            android:paddingLeft="1dp"
-            android:paddingRight="1dp"
-            android:text="@string/status_prove_ahead"
-            android:textColor="@color/major_light"
-            android:textSize="14sp" />
+            <TextView
+                android:id="@+id/reportTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:textColor="@color/hint_light_grey"
+                android:textSize="14sp" />
 
-        <ImageView
-            android:id="@+id/photoImageView"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_centerVertical="true"
-			android:layout_toLeftOf="@+id/reportTextView"
-            android:contentDescription="@string/invoice"
-            android:src="@drawable/camera" />
+            <ImageView
+                android:id="@+id/categoryImageView"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_marginLeft="6dp"
+                android:layout_gravity="center_vertical"
+                android:contentDescription="@string/tag"
+                android:src="@drawable/default_icon" />
 
-        <TextView
-            android:id="@+id/reportTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginLeft="5dp"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:textColor="@color/hint_light_grey"
-            android:textSize="14sp" />
+        </LinearLayout>
+
     </RelativeLayout>
 
     <LinearLayout
@@ -97,15 +119,7 @@
 	        android:singleLine="true"
 	        android:textColor="@color/font_major_dark"
 	        android:textSize="20sp" />
-    </LinearLayout>
 
-    <ImageView
-        android:id="@+id/categoryImageView"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:layout_marginTop="3dp"
-        android:layout_gravity="right"
-        android:contentDescription="@string/tag"
-        android:src="@drawable/default_icon" />   
+    </LinearLayout>
 
 </LinearLayout>
