--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -61,6 +61,7 @@
     <color name="status_finished">#FFCCCECF</color>  
     <color name="status_item_prove_ahead">#FFFF5857</color>      
     <color name="status_item_approved">#FF3CB798</color>
+    <color name="status_cc">#FFFDCA49</color>
     
     <color name="stat_title">#FFECD4D5</color>
     <color name="stat_ongoing">#FF45A3D2</color>
