--- a/app/src/main/res/layout/activity_reim_show.xml
+++ b/app/src/main/res/layout/activity_reim_show.xml
@@ -99,7 +99,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="56dp" >
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -116,10 +116,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
+                    android:layout_marginLeft="80dp"
+                    android:layout_marginRight="16dp"
                     android:paddingTop="3dp"
                     android:paddingBottom="13dp"
-                    android:layout_marginLeft="80dp"
-                    android:layout_marginRight="16dp" />
+                    android:minHeight="56dp"/>
 
             </RelativeLayout>
 
